# blender

intern/cycles/blender/: camera.cpp
intern/cycles/blender/addon/: properties.py
intern/cycles/kernel/: types.h
intern/cycles/kernel/camera/: projection.h
intern/cycles/scene/: camera.cpp  camera.h
scripts/startup/bl_ui/: __init__.py  anim_layers.py  node_add_menu_geometry.py  properties_data_camera.py  space_userpref.py
source/blender/animrig/: ANIM_animation.hh  ANIM_animdata.hh  ANIM_evaluation.hh  ANIM_fcurve.hh  CMakeLists.txt
source/blender/animrig/intern/: action.cc  animation.cc  animation_test.cc  animdata.cc  evaluation.cc  evaluation_internal.hh  evaluation_test.cc  fcurve.cc
source/blender/blenkernel/: BKE_animation.h  BKE_animation.hh  BKE_fcurve.h  BKE_idtype.h  BKE_idtype.hh  BKE_main.h  BKE_main.hh  BKE_node.h  CMakeLists.txt
source/blender/blenkernel/intern/: anim_data.cc  anim_sys.cc  animation.cc  cachefile.c  fcurve.cc  idtype.cc  image.cc  lib_override.cc  lib_query.cc  main.cc
source/blender/blenlib/intern/: path_util.cc
source/blender/blenlib/tests/: BLI_path_util_test.cc
source/blender/blenloader/intern/: readfile.cc
source/blender/blentranslation/: BLT_translation.h  BLT_translation.hh
source/blender/depsgraph/: CMakeLists.txt
source/blender/editors/animation/: anim_channels_edit.cc
source/blender/makesdna/: DNA_ID.h  DNA_anim_defaults.h  DNA_anim_types.h  DNA_anim_types_default.h  DNA_userdef_types.h
source/blender/nodes/: NOD_static_types.h
tests/python/: CMakeLists.txt  bl_animation_id.py
(+35 files in other folders)
